# sapphire-cpp

./: CMakeLists.txt  LICENSE  README.md  build.sh  preprocessed_build.sh
.circleci/: config.yml
src/: CMakeLists.txt  main.cpp
src/ast/: base.h  block.h  comment.h  function.h  import.h  module.h  sapphire.h  statement.h  variable.h
src/grammar/: arithmetic.hpp  base.hpp  comment.hpp  core_keywords.hpp  function.hpp  identify.hpp  import.hpp  sapphire.hpp  skipper.hpp  statement.hpp  variable.hpp
src/types/: function_attribute.h  statement_attribute.h  variable_attribute.h
src/util/: class_identity.hpp  dumper.hpp  enum_bitset.hpp  helper.hpp  inherit.hpp  opaque_alias.hpp  string_symbol.hpp
src/validater/: modules.hpp
test/: CMakeLists.txt  parser.hpp  test_comment.cpp  test_function.cpp  test_import.cpp  test_one_statement.cpp  test_variable.cpp
